--- a/src/app/divulgar/divulgar.page.html
+++ b/src/app/divulgar/divulgar.page.html
@@ -11,7 +11,7 @@
 
 <ion-content [fullscreen]="true">
   <div id="qrcode">
-    <img src="../../assets/images/qrcoderifa.png" alt="QR Code" />
+    <img src="assets/images/qrcoderifa.png" alt="QR Code" />
   </div>
 
   <p style="text-align: center; margin-top: 5px">{{copiado}}</p>
@@ -27,13 +27,13 @@
         href="https://www.facebook.com/sharer/sharer.php?u=http://minharifadigital.shop"
         target="_blank"
       >
-        <img src="../../assets/images/face.png" />
+        <img src="assets/images/face.png" />
       </a>
       <a
         href="https://www.facebook.com/dialog/send?link=http://minharifadigital.shop&app_id=123456789"
         target="_blank"
       >
-        <img src="../../assets/images/facedm.png" />
+        <img src="assets/images/facedm.png" />
       </a>
     </div>
   </ion-item>
