--- a/src/app/participar/participar.page.html
+++ b/src/app/participar/participar.page.html
@@ -79,7 +79,7 @@
     </ion-button>
   </ion-item>
   <ion-toolbar>
-    <ion-title id="preco"><img src="../../assets/images/pix.png" /> </ion-title>
+    <ion-title id="preco"><img src="assets/images/pix.png" /> </ion-title>
     <ion-buttons slot="end">
       <ion-button
         id="buy"
@@ -121,5 +121,5 @@
   </ion-item>
   <br /> -->
 
- 
+
 </ion-content>
